[package]
name = "resctl_below"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[[bin]]
name = "below"
path = "src/main.rs"

[dependencies]
below-thrift = "0.1"
cgroupfs = "0.1"
below-common = "0.1"
dump = { path = "dump" }
below-model = "0.1"
fb_procfs = "0.1"
below-store = "0.1"
view = { path = "view" }
slog_glog_fmt = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master" }
stats = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master" }
anyhow = "1.0"
async-trait = "0.1.29"
cursive = { version = "0.15.0", default-features = false, features = ["crossterm", "termion"] }
libbpf-rs = "0.6.1"
libc = "0.2"
once_cell = "1.4"
plain = "0.2"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
slog-async = "2.3"
slog-term = "2.4.2"
structopt = "0.3.21"
tokio = { version = "=0.2.13", features = ["full"] }
toml = "=0.5.7"
walkdir = "2.2.9"

[dev-dependencies]
below_derive = "0.1"
futures = { version = "0.3.5", features = ["async-await", "compat"] }
maplit = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
tempdir = "0.3"
