[package]
name = "dump"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
below_derive = "0.1"
below-common = { path = "../common" }
model = { path = "../model" }
render = { path = "../render" }
fb_procfs = { path = "../../common/procfs" }
store = { path = "../store" }
anyhow = "1.0"
once_cell = "1.4"
regex = "1.4.2"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
structopt = "0.3.21"
toml = "=0.5.7"
