[package]
name = "below-dump"
description = "Dump crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.3"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[lib]
name = "dump"

[dependencies]
below_derive = "0.1"
below-common = "0.1"
render = "0.1"
below-model = "0.1"
fb_procfs = "0.1"
below-store = "0.1"
anyhow = "1.0"
once_cell = "1.4"
regex = "1.4.2"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
structopt = "0.3.21"
toml = "0.5"
