[package]
name = "below-thrift"
description = "Thrift definitions for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.0"
license = "Apache-2.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
include = ["*.thrift", "*.rs"]
build = "thrift_build.rs"

[lib]
path = "thrift_lib.rs"

[build-dependencies]
fbthrift_compiler = "0.1"

[dependencies]
cgroupfs-thrift = "0.1"
procfs-thrift = "0.1"
fbthrift_codegen_includer_proc_macro = "0.1"
fbthrift = "0.0.1"
anyhow = "1.0"
async-trait = "0.1.29"
const-cstr = "0.3.0"
futures = { version = "0.3.5", features = ["async-await", "compat"] }
lazy_static = "1.0"
ref-cast = "1.0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
thiserror = "1.0"
