[package]
name = "below-model"
description = "Model crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.4"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[lib]
name = "model"

[dependencies]
below-thrift = "0.1"
below_derive = "0.1"
cgroupfs = "0.1"
below-common = "0.1"
fb_procfs = "0.1"
anyhow = "1.0"
hostname = "0.3"
os_info = "=2.0.1"
regex = "1.4.2"
slog = { version = "2.5", features = ["max_level_debug"] }
