[package]
name = "below-render"
edition = "2018"
version = "0.1.3"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
below-common = "0.1"
below-model = "0.1"
