[package]
name = "view"
description = "View crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
below_derive = "0.1"
below-common = "0.1"
render = { path = "../render" }
below-model = "0.1"
fb_procfs = "0.1"
below-store = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cursive = { version = "0.15.0", default-features = false, features = ["crossterm", "termion"] }
cursive_buffered_backend = "0.4.1"
humantime = "1.3"
libc = "0.2"
once_cell = "1.4"
slog = { version = "2.5", features = ["max_level_debug"] }
toml = "=0.5.7"
