[package]
name = "cgroupfs"
description = "A crate for reading cgroupv2 data"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.4"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["src/lib.rs"]

[dependencies]
cgroupfs-thrift = "0.1"
nix = "0.19"
openat = "0.1.18"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
