[package]
name = "fb_procfs"
description = "A crate for reading procfs"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.4"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["src/lib.rs"]

[lib]
name = "procfs"

[dependencies]
procfs-thrift = "0.1"
lazy_static = "1.0"
libc = "0.2"
openat = "0.1.18"
thiserror = "1.0"
threadpool = "1.8.1"

[dev-dependencies]
tempfile = "3.1"
