[package]
name = "cgroupfs-thrift"
description = "Thrift definitions for cgroupfs crate"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/danobi/resctl/"
edition = "2018"
version = "0.1.2"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
include = ["*.rs", "*.thrift"]
build = "thrift_build.rs"

[lib]
path = "thrift_lib.rs"

[build-dependencies]
fbthrift_compiler = "0.1"

[dependencies]
fbthrift_codegen_includer_proc_macro = "0.1"
fbthrift = "0.0.1"
anyhow = "1.0"
async-trait = "0.1.29"
const-cstr = "0.3.0"
futures = { version = "0.3.5", features = ["async-await", "compat"] }
lazy_static = "1.0"
ref-cast = "1.0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
thiserror = "1.0"
